# ctf-tools

./: .gitignore  CMakeLists.txt
include/ctftools/: ctftools.hpp
src/: ctftools.cpp
tests/: test_easy.cpp
